# imagery

./: .flake8  .gitignore  .pylintrc  .transifex  README.md  io.github.mpobaschnig.Imagery.json  meson.build
.github/workflows/: flake8.yaml  flake8.yml  flatpak.yml  mypy.yml  pylint.yml
build-aux/: nvidia-smi-wrapper.sh  python3-accelerate.json  python3-diffusers.json  python3-scipy.json  python3-torch.json  python3-transformers.json  test.py
data/: io.github.mpobaschnig.Imagery.appdata.xml.in  io.github.mpobaschnig.Imagery.desktop.in  io.github.mpobaschnig.Imagery.gschema.xml  meson.build  resources.gresource.xml
data/icons/: meson.build
data/ui/: image_to_image_page.ui  preferences.ui  start_page.ui  text_to_image_page.ui  window copy.ui  window.ui
po/: POTFILES  POTFILES.in  de.po  en.po  imagery.pot  meson.build
src/: download_manager.py  downloader.py  file.py  image_to_image_page.py  image_to_image_page.ui  image_to_image_runner.py  imagery.gresource.xml  imagery.in  inpainting_page.py  inpainting_page.ui  main.py  meson.build  mod.py  model_files.py  outpainting_page.py  outpainting_page.ui  preferences.py  preferences.ui  prompt_ideas.py  settings_manager.py  start_page.py  start_page.ui  text_to_image_page.py  text_to_image_page.ui  text_to_image_runner.py  upscaling_page.py  upscaling_page.ui  window.py  window.ui
